--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -79,7 +79,10 @@
     <ClCompile Include="..\Source\p1 Two Sum.cpp" />
     <ClCompile Include="..\Source\p10 Regular Expression Matching.cpp" />
     <ClCompile Include="..\Source\p11 Container With Most Water.cpp" />
+    <ClCompile Include="..\Source\p12 Integer to Roman.cpp" />
+    <ClCompile Include="..\Source\p13 Roman to Integer.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
+    <ClCompile Include="..\Source\p14 Longest Common Prefix.cpp" />
     <ClCompile Include="..\Source\p2 Add Two Numbers.cpp" />
     <ClCompile Include="..\Source\p3 Longest Substring Without Repeating Characters.cpp" />
     <ClCompile Include="..\Source\p4 Median of Two Sorted Arrays.cpp" />
@@ -88,6 +91,7 @@
     <ClCompile Include="..\Source\p7 Reverse Integer.cpp" />
     <ClCompile Include="..\Source\p8 String to Integer (atoi).cpp" />
     <ClCompile Include="..\Source\p9 Palindrome Number.cpp" />
+    <ClCompile Include="..\Source\test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
