--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -87,6 +87,9 @@
     <ClCompile Include="..\Source\p017 Letter Combinations of a Phone Number.cpp" />
     <ClCompile Include="..\Source\p018 4Sum.cpp" />
     <ClCompile Include="..\Source\p022 Generate Parentheses.cpp" />
+    <ClCompile Include="..\Source\p024 Swap Nodes in Pairs.cpp" />
+    <ClCompile Include="..\Source\p025 Reverse Nodes in k-Group.cpp" />
+    <ClCompile Include="..\Source\p026 Remove Duplicates from Sorted Array.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
     <ClCompile Include="..\Source\p019 Remove Nth Node From End of List.cpp" />
