--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -90,6 +90,10 @@
     <ClCompile Include="..\Source\p024 Swap Nodes in Pairs.cpp" />
     <ClCompile Include="..\Source\p025 Reverse Nodes in k-Group.cpp" />
     <ClCompile Include="..\Source\p026 Remove Duplicates from Sorted Array.cpp" />
+    <ClCompile Include="..\Source\p027 Remove Element.cpp" />
+    <ClCompile Include="..\Source\p028 Implement strStr().cpp" />
+    <ClCompile Include="..\Source\p029 Divide Two Integers.cpp" />
+    <ClCompile Include="..\Source\p030 Substring with Concatenation of All Words.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
     <ClCompile Include="..\Source\p019 Remove Nth Node From End of List.cpp" />
