--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -94,6 +94,12 @@
     <ClCompile Include="..\Source\p028 Implement strStr().cpp" />
     <ClCompile Include="..\Source\p029 Divide Two Integers.cpp" />
     <ClCompile Include="..\Source\p030 Substring with Concatenation of All Words.cpp" />
+    <ClCompile Include="..\Source\p031 Next Permutation.cpp" />
+    <ClCompile Include="..\Source\p032 Longest Valid Parentheses.cpp" />
+    <ClCompile Include="..\Source\p033 Search in Rotated Sorted Array.cpp" />
+    <ClCompile Include="..\Source\p034 Search for a Range.cpp" />
+    <ClCompile Include="..\Source\p035 Search Insert Position.cpp" />
+    <ClCompile Include="..\Source\p081 Search in Rotated Sorted Array II.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
     <ClCompile Include="..\Source\p019 Remove Nth Node From End of List.cpp" />
