--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -105,6 +105,19 @@
     <ClCompile Include="..\Source\p039 Combination Sum.cpp" />
     <ClCompile Include="..\Source\p040 Combination Sum II.cpp" />
     <ClCompile Include="..\Source\p041 First Missing Positive.cpp" />
+    <ClCompile Include="..\Source\p043 Multiply Strings.cpp" />
+    <ClCompile Include="..\Source\p044 Wildcard Matching.cpp" />
+    <ClCompile Include="..\Source\p045 Jump Game II.cpp" />
+    <ClCompile Include="..\Source\p046 Permutations.cpp" />
+    <ClCompile Include="..\Source\p047 Permutations.cpp" />
+    <ClCompile Include="..\Source\p048 Rotate Image.cpp" />
+    <ClCompile Include="..\Source\p049 Anagrams.cpp" />
+    <ClCompile Include="..\Source\p050 Pow(x, n).cpp" />
+    <ClCompile Include="..\Source\p051 N-Queens.cpp" />
+    <ClCompile Include="..\Source\p052 N-Queens II.cpp" />
+    <ClCompile Include="..\Source\p053 Maximum Subarray.cpp" />
+    <ClCompile Include="..\Source\p054 Spiral Matrix.cpp" />
+    <ClCompile Include="..\Source\p055 Jump Game.cpp" />
     <ClCompile Include="..\Source\p081 Search in Rotated Sorted Array II.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
