--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -195,13 +195,13 @@
     <ClCompile Include="..\Source\p056 Merge Intervals.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\p057.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\Source\p058 Length of Last Word.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\Source\p059 Spiral Matrix II.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\p057 Insert Interval.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
