--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -121,6 +121,8 @@
     <ClCompile Include="..\Source\p057 Insert Interval.cpp" />
     <ClCompile Include="..\Source\p058 Length of Last Word.cpp" />
     <ClCompile Include="..\Source\p059 Spiral Matrix II.cpp" />
+    <ClCompile Include="..\Source\p060 Permutation Sequence.cpp" />
+    <ClCompile Include="..\Source\p061 Rotate List.cpp" />
     <ClCompile Include="..\Source\p081 Search in Rotated Sorted Array II.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
