--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -123,6 +123,9 @@
     <ClCompile Include="..\Source\p059 Spiral Matrix II.cpp" />
     <ClCompile Include="..\Source\p060 Permutation Sequence.cpp" />
     <ClCompile Include="..\Source\p061 Rotate List.cpp" />
+    <ClCompile Include="..\Source\p062 Unique Paths.cpp" />
+    <ClCompile Include="..\Source\p063 Unique Paths II.cpp" />
+    <ClCompile Include="..\Source\p064 Minimum Path Sum.cpp" />
     <ClCompile Include="..\Source\p081 Search in Rotated Sorted Array II.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
