--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -129,6 +129,8 @@
     <ClCompile Include="..\Source\p065 Valid Number.cpp" />
     <ClCompile Include="..\Source\p066 Plus One.cpp" />
     <ClCompile Include="..\Source\p067 Add Binary.cpp" />
+    <ClCompile Include="..\Source\p068 Text Justification.cpp" />
+    <ClCompile Include="..\Source\p069 Sqrt(x).cpp" />
     <ClCompile Include="..\Source\p081 Search in Rotated Sorted Array II.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
