--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -131,6 +131,10 @@
     <ClCompile Include="..\Source\p067 Add Binary.cpp" />
     <ClCompile Include="..\Source\p068 Text Justification.cpp" />
     <ClCompile Include="..\Source\p069 Sqrt(x).cpp" />
+    <ClCompile Include="..\Source\p070 Climbing Stairs.cpp" />
+    <ClCompile Include="..\Source\p071 Simplify Path.cpp" />
+    <ClCompile Include="..\Source\p072 Edit Distance.cpp" />
+    <ClCompile Include="..\Source\p073 Set Matrix Zeroes.cpp" />
     <ClCompile Include="..\Source\p081 Search in Rotated Sorted Array II.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
