--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -135,6 +135,10 @@
     <ClCompile Include="..\Source\p071 Simplify Path.cpp" />
     <ClCompile Include="..\Source\p072 Edit Distance.cpp" />
     <ClCompile Include="..\Source\p073 Set Matrix Zeroes.cpp" />
+    <ClCompile Include="..\Source\p074 Search a 2D Matrix.cpp" />
+    <ClCompile Include="..\Source\p075 Sort Colors.cpp" />
+    <ClCompile Include="..\Source\p076 Minimum Window Substring.cpp" />
+    <ClCompile Include="..\Source\p077 Combinations.cpp" />
     <ClCompile Include="..\Source\p081 Search in Rotated Sorted Array II.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
