--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -76,6 +76,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Source\ali1.cpp" />
     <ClCompile Include="..\Source\leetcode.cpp" />
     <ClCompile Include="..\Source\p001 Two Sum.cpp" />
     <ClCompile Include="..\Source\p010 Regular Expression Matching.cpp" />
@@ -154,6 +155,8 @@
     <ClCompile Include="..\Source\p090 Subsets II.cpp" />
     <ClCompile Include="..\Source\p091 Decode Ways.cpp" />
     <ClCompile Include="..\Source\p092 Reverse Linked List II.cpp" />
+    <ClCompile Include="..\Source\p093 Restore IP Addresses.cpp" />
+    <ClCompile Include="..\Source\p094 Binary Tree Inorder Traversal.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
     <ClCompile Include="..\Source\p019 Remove Nth Node From End of List.cpp" />
