--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -162,6 +162,11 @@
     <ClCompile Include="..\Source\p097 Interleaving String.cpp" />
     <ClCompile Include="..\Source\p098 Validate Binary Search Tree.cpp" />
     <ClCompile Include="..\Source\p099 Recover Binary Search Tree.cpp" />
+    <ClCompile Include="..\Source\p100 Same Tree.cpp" />
+    <ClCompile Include="..\Source\p101 Symmetric Tree.cpp" />
+    <ClCompile Include="..\Source\p102 Binary Tree Level Order Traversal.cpp" />
+    <ClCompile Include="..\Source\p103 Binary Tree Zigzag Level Order Traversal.cpp" />
+    <ClCompile Include="..\Source\p104 Maximum Depth of Binary Tree.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
     <ClCompile Include="..\Source\p019 Remove Nth Node From End of List.cpp" />
