--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -167,6 +167,9 @@
     <ClCompile Include="..\Source\p102 Binary Tree Level Order Traversal.cpp" />
     <ClCompile Include="..\Source\p103 Binary Tree Zigzag Level Order Traversal.cpp" />
     <ClCompile Include="..\Source\p104 Maximum Depth of Binary Tree.cpp" />
+    <ClCompile Include="..\Source\p105 Construct Binary Tree from Preorder and Inorder Traversal.cpp" />
+    <ClCompile Include="..\Source\p106 Construct Binary Tree from Inorder and Postorder Traversal.cpp" />
+    <ClCompile Include="..\Source\p107 Binary Tree Level Order Traversal II.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
     <ClCompile Include="..\Source\p019 Remove Nth Node From End of List.cpp" />
