--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -170,6 +170,12 @@
     <ClCompile Include="..\Source\p105 Construct Binary Tree from Preorder and Inorder Traversal.cpp" />
     <ClCompile Include="..\Source\p106 Construct Binary Tree from Inorder and Postorder Traversal.cpp" />
     <ClCompile Include="..\Source\p107 Binary Tree Level Order Traversal II.cpp" />
+    <ClCompile Include="..\Source\p108 Convert Sorted Array to Binary Search Tree.cpp" />
+    <ClCompile Include="..\Source\p109 Convert Sorted List to Binary Search Tree.cpp" />
+    <ClCompile Include="..\Source\p110 Balanced Binary Tree.cpp" />
+    <ClCompile Include="..\Source\p111 Minimum Depth of Binary Tree.cpp" />
+    <ClCompile Include="..\Source\p112 Path Sum.cpp" />
+    <ClCompile Include="..\Source\p113 Path Sum II.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
     <ClCompile Include="..\Source\p019 Remove Nth Node From End of List.cpp" />
