--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -176,6 +176,8 @@
     <ClCompile Include="..\Source\p111 Minimum Depth of Binary Tree.cpp" />
     <ClCompile Include="..\Source\p112 Path Sum.cpp" />
     <ClCompile Include="..\Source\p113 Path Sum II.cpp" />
+    <ClCompile Include="..\Source\p114 Flatten Binary Tree to Linked List.cpp" />
+    <ClCompile Include="..\Source\p115 Distinct Subsequences.cpp" />
     <ClCompile Include="..\Source\p136 Single Number.cpp" />
     <ClCompile Include="..\Source\p014 Longest Common Prefix.cpp" />
     <ClCompile Include="..\Source\p019 Remove Nth Node From End of List.cpp" />
